--- a/package.json
+++ b/package.json
@@ -4,9 +4,19 @@
   "description": "my first cypress test",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "node_modules\\.bin\\cypress run",
+    "tagged:test": "node_modules\\.bin\\cypress-tags run",
+    "headTest": "npm run test -- --headed",
+    "chromeTest": "npm run test -- --browser chrome",
+    "recordDashBoardTest": "npm run test --  --headed --browser chrome --record --key b09ea9f6-6fef-4f4f-bbeb-006886a86e9e",
     "cypress:open": "cypress open",
-    "cy:run": "cypress run"
+    "cy:run": "cypress run",
+    "cucumberTest": "npm run test -- --headed --browser chrome --spec \"cypress/integration/examples/BDD/*.feature",
+    "cucumberSmokeTest": "npm run tagged:test -e Tags='@Smoke' --headed --browser chrome --spec \"cypress/integration/examples/BDD/*.feature",
+    "cucumberRegressionTest": "npm run tagged:test -e Tags='@Regression' --headed --browser chrome --spec \"cypress/integration/examples/BDD/*.feature"
+  },
+  "cypress-cucumber-preprocessor": {
+    "nonGlobalStepDefinitions": true
   },
   "repository": {
     "type": "git",
@@ -20,6 +30,7 @@
   "homepage": "https://github.com/bharathwaj13/Cypress#readme",
   "devDependencies": {
     "cypress": "^11.2.0",
+    "cypress-cucumber-preprocessor": "^4.3.1",
     "cypress-iframe": "^1.0.1"
   }
 }
