--- a/package.json
+++ b/package.json
@@ -16,7 +16,13 @@
     "cucumberRegressionTest": "npm run tagged:test -e Tags='@Regression' --headed --browser chrome --spec \"cypress/integration/examples/BDD/*.feature"
   },
   "cypress-cucumber-preprocessor": {
-    "nonGlobalStepDefinitions": true
+    "nonGlobalStepDefinitions": true,
+    "cucumberJson": {
+      "generate": true,
+      "outputFolder": "cypress/cucumber-json",
+      "filePrefix": "",
+      "fileSuffix": ".cucumber"
+    }
   },
   "repository": {
     "type": "git",
@@ -31,6 +37,7 @@
   "devDependencies": {
     "cypress": "^11.2.0",
     "cypress-cucumber-preprocessor": "^4.3.1",
-    "cypress-iframe": "^1.0.1"
+    "cypress-iframe": "^1.0.1",
+    "multiple-cucumber-html-reporter": "^3.0.1"
   }
 }
