--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "@4tw/cypress-drag-drop": "^2.2.3",
     "cypress": "^11.2.0",
     "cypress-cucumber-preprocessor": "^4.3.1",
+    "cypress-file-upload": "^5.0.8",
     "cypress-iframe": "^1.0.1",
     "multiple-cucumber-html-reporter": "^3.0.1"
   }
